@@ -173,7 +173,6 @@ typedef uint32_t SerdNodeFlags;
 typedef struct {
   const uint8_t* SERD_NULLABLE buf;     ///< Value string
   size_t                       n_bytes; ///< Size in bytes (excluding null)
-  size_t                       n_chars; ///< String length (excluding null)
   SerdNodeFlags                flags;   ///< Node flags (string properties)
   SerdType                     type;    ///< Node type
 } SerdNode;
@@ -248,15 +247,13 @@ serd_strerror(SerdStatus status);
 /**
    Measure a UTF-8 string.
 
-   @return Length of `str` in characters (except NULL).
+   @return Length of `str` in bytes.
    @param str A null-terminated UTF-8 string.
-   @param n_bytes (Output) Set to the size of `str` in bytes (except NULL).
    @param flags (Output) Set to the applicable flags.
 */
 SERD_API
 size_t
 serd_strlen(const uint8_t* SERD_NONNULL  str,
-            size_t* SERD_NULLABLE        n_bytes,
             SerdNodeFlags* SERD_NULLABLE flags);
 
 /**
@@ -413,7 +410,7 @@ serd_uri_serialise_relative(const SerdURI* SERD_NONNULL  uri,
    @{
 */
 
-static const SerdNode SERD_NODE_NULL = {NULL, 0, 0, 0, SERD_NOTHING};
+static const SerdNode SERD_NODE_NULL = {NULL, 0, 0, SERD_NOTHING};
 
 /**
    Make a (shallow) node from `str`.
