@@ -45,7 +45,7 @@ set_blank_id(SerdReader* const reader, const Ref ref, const size_t buf_size)
 {
   SerdNode*   node   = deref(reader, ref);
   const char* prefix = reader->bprefix ? (const char*)reader->bprefix : "";
-  node->n_bytes = node->n_chars = (size_t)snprintf(
+  node->n_bytes      = (size_t)snprintf(
     (char*)node->buf, buf_size, "%sb%u", prefix, reader->next_id++);
 }
 
@@ -93,10 +93,10 @@ push_node_padded(SerdReader* const reader,
     &reader->stack, sizeof(SerdNode) + maxlen + 1, sizeof(SerdNode));
 
   SerdNode* const node = (SerdNode*)mem;
-  node->n_bytes = node->n_chars = n_bytes;
-  node->flags                   = 0;
-  node->type                    = type;
-  node->buf                     = NULL;
+  node->n_bytes        = n_bytes;
+  node->flags          = 0;
+  node->type           = type;
+  node->buf            = NULL;
 
   uint8_t* buf = (uint8_t*)(node + 1);
   memcpy(buf, str, n_bytes + 1);
