@@ -2,6 +2,7 @@ serd (1.0.1) unstable;
 
   * Add SerdBuffer for mutable buffers to keep SerdChunk const-correct
   * Remove serd_uri_to_path()
+  * Remove useless character counting from API
 
  -- David Robillard <d@drobilla.net>  Wed, 13 Jan 2021 13:29:44 +0000
 
